# solana-ua-bootcamp-2024-08-06

practice-1/solana-cli/: .gitignore  Cargo.toml
practice-1/solana-cli/src/: main.rs
practice-2/solana-cli/: Cargo.toml
practice-2/solana-cli/src/: main.rs
