[package]
name = "solana-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.22"
solana-client = "1.18.22"
bs58 = "0.5.1"
dotenvy = "0.15.7"
serde_json = "1.0.127"
tokio = { version = "1.39.2", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
spl-token = "4.0.0"
spl-associated-token-account = "3.0.4"
mpl-token-metadata = "4.1.2"
